--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -379,6 +379,45 @@ footer p {
     border: 0.1rem solid var(--primary-color);
 }
 
+.monografia h2 {
+    margin-bottom: 1px;
+}
+
+.intro-text-content2 {
+    text-decoration: solid;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+
+}
+
+.intro-text-content1 {
+    text-decoration: solid;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+
+}
+
+.intro-content2 button {
+    background: none;
+
+}
+
+#mono button {
+    border: 0.5rem solid var(--white-color);
+    background: none;
+    color: var(--white-color);
+    padding: 1.5rem 2rem;
+    font-size: 3rem;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+    margin-bottom: 40px;
+    margin-top: 50px;
+}
+
+
+
 @media (max-width: 800px) {
     .intro-content, .grid {
         grid-template-columns: 1fr;
